# Benchmark-EastAfrica

./: .gitignore  EXPERIMENTAL_SETUP.md  README.md  acc_lead_curves.py  crpss_skill_maps.py  crpss_skill_maps_all_leads.py  ea_common.py  index.html  mam2024_country_rainfall.py  mam2024_cumulative_rainfall.ipynb  mkdocs.yml  pyproject.toml  run_inference.sh  run_inference_parallel.sh  run_neuralgcm.sh  run_verification.py  skill_analysis.ipynb  ssr_lead_curves.py  ssr_zonal_profile.py  sync_outputs.py
.github/workflows/: docs.yml
apex/: __init__.py
apex/normalization/: __init__.py
benchmark_ea/: analysis_io.py  config.py  domain.py  metrics.py  regrid.py  run.py
benchmark_ea/models/: base.py  climatology.py  fourcastnet.py  gencast.py  graphcast.py  neuralgcm.py
benchmark_ea/truth/: chirps.py  era5.py  tamsat.py
benchmark_ea/verification/: __init__.py  data.py  event_plots.py  mask.py  plots.py  regional.py  regional_skill.py  scores.py  seasons.py  skill_lead_plots.py  style.py  tables.py
data/: figmeta.js
docs/: data.md  experimental-setup.md  glossary.md  index.md  key-findings.md  methodology.md  pipeline.md  reproducibility.md
docs/results/: deterministic-skill.md  event-based.md  index.md  probabilistic-calibration.md  skill-vs-climatology.md
envs/: aim-graphcast.yml  neuralgcm.yml
latex/: pipeline_overview.tex
mam2024_cumulative_outputs/: extreme_indices.csv  mam_cumulative_skill.csv  mam_totals_summary.csv
outputs/JF/: acc_by_model_truth_lead.csv  brier_scores.csv  crpss_vs_climatology_by_model_obs_lead.csv  deterministic_skill_by_model_obs_lead.csv  event_scores_by_threshold.csv  interval_coverage.csv  probabilistic_scores.csv  rank_histogram_stats.csv  reliability_tables.csv  ssr_by_model_truth_lead.csv  summary_bias_table.csv
outputs/JJAS/: acc_by_model_truth_lead.csv  brier_scores.csv  crpss_vs_climatology_by_model_obs_lead.csv  deterministic_skill_by_model_obs_lead.csv  event_scores_by_threshold.csv  interval_coverage.csv  probabilistic_scores.csv  rank_histogram_stats.csv  reliability_tables.csv  ssr_by_model_truth_lead.csv  summary_bias_table.csv
outputs/MAM/: acc_by_model_truth_lead.csv  brier_scores.csv  crpss_vs_climatology_by_model_obs_lead.csv  deterministic_skill_by_model_obs_lead.csv  (+7 more)
outputs_2024/: summary_bias_table.csv
outputs_2024_corrected/: acc_by_model_truth_lead.csv  brier_scores.csv  deterministic_skill_by_model_obs_lead.csv  event_scores_by_threshold.csv  interval_coverage.csv  probabilistic_scores.csv  rank_histogram_stats.csv  reliability_tables.csv  ssr_by_model_truth_lead.csv  summary_bias_table.csv
tables/: crpss_vs_climatology_by_model_obs_lead.csv  deterministic_skill_by_model_obs_lead.csv  regional_skill_by_lat_band.csv
tests/: test_analysis_io.py  test_metrics.py  test_pipeline_semantics.py  test_prediction_output.py
website/: README.md  app.js  index.html  manifest.js  style.css  sync_outputs.py
(+39 files in other folders)
