[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark-ea"
version = "0.1.0"
description = "Multi-model probabilistic benchmark for daily rainfall over East Africa"
requires-python = ">=3.10"
# Lower bounds are the versions the benchmark was developed and tested against
# (the aim-graphcast env). For an exact, fully-reproducible environment use the
# pinned lockfiles in envs/ (conda env create -f envs/aim-graphcast.yml).
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.2",
    "xarray>=2025.6.1",
    "xesmf>=0.8.10",
    "zarr>=2.18.3,<3",
    "cartopy>=0.25.0",
    "shapely>=2.1.2",
    "properscoring>=0.1",
    "scipy>=1.15.3",
    "requests>=2.33.1",
    "tqdm>=4.68.2",
    "matplotlib>=3.10.8",
    # GCS access (ARCO-ERA5 + model checkpoints)
    "gcsfs>=2023.6",
    "google-cloud-storage>=3.10.1",
]

[project.optional-dependencies]
# JAX + deep-learning deps are environment-specific (CUDA version matters) and are
# NOT pinned here. For a reproducible ML environment use the pinned lockfiles:
#   conda env create -f envs/aim-graphcast.yml   # GenCast / GraphCast / FourCastNet v2
#   conda env create -f envs/neuralgcm.yml       # NeuralGCM (dedicated env)
# To install the ML deps manually instead:
#   pip install "graphcast @ git+https://github.com/google-deepmind/graphcast"
#   pip install dm-haiku "jax[cuda12_pip]" scikit-learn tabulate
# FourCastNet additionally requires:
#   pip install "modulus[all]" earth2mip
dev = ["jupyter", "ipykernel", "pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmark_ea*"]

[project.scripts]
benchmark-ea = "benchmark_ea.run:main"
